fix: 考核组名称下拉列表过滤与排序修正 + 解除自评部门排除 + UNIT范围orgId一致性修复
- 统一考核组名称下拉列表按创建时间倒序排列

- 指标设定模块过滤 INDICATOR_SET 类型考核组

- 考核进度/结果查询模块过滤 PERFORMANCE 类型考核组

- 修复 DeptResult、LeaderResult 缺少 examCategory 过滤

- 移除 ExamProgress、SelfEvaluation 前端自定义排序

- 解除考核部门不能选择自己部门的限制规则

- 修复 getMyTasks UNIT范围下 orgId/orgName 不一致问题